--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,7 @@ window_status_size = 400,0
 [global_variables]
 debug = False
 tempo_debug = 0.1
+# 1 - 3 - Computador vs Computador ; 2- Player vs Computador ; 4 - Player vs Player 
 modo_de_jogo = 4
 vez_de_jogar = 1
 win_n_o = 0
