--- a/themes.ini
+++ b/themes.ini
@@ -1,5 +1,5 @@
 [set_theme]
-theme = ivory1
+theme = 666
 random_boot = 1
 random_partida = 0
 
@@ -23,6 +23,16 @@ circle_color = 134,134,134
 score_value_color = 134,134,134
 score_title_color = 153, 153, 153
 
+[dark3]
+bg_color = 40,44,52
+line_color = 105,105,105
+retangulo_sele_color = 33,37,43
+retangulo_sele_vitoria = 72,61,139
+x_color= 75,0,130
+circle_color = 255,69,0
+score_value_color = 255,255,255
+score_title_color = 105,105,105
+
 [light1]
 bg_color = 230,231,232
 line_color = 196, 196, 196
@@ -33,6 +43,15 @@ circle_color = 245,134,52
 score_value_color = 0,0,0
 score_title_color = 153, 153, 153
 
+[light2]
+bg_color = 245,245,245
+line_color = 220,220,220
+retangulo_sele_color = 255,250,250
+retangulo_sele_vitoria = 240,230,140
+x_color= 70,130,180
+circle_color = 255,160,122
+score_value_color = 0,0,0
+score_title_color = 128,128,128
 
 [ivory1]
 bg_color = 255,249,185
@@ -43,3 +62,154 @@ x_color= 134, 134, 134
 circle_color = 134,134,134
 score_value_color = 134, 134, 134
 score_title_color = 153, 153, 153
+
+[pastel1]
+bg_color = 255,248,220  
+line_color = 211,211,211 
+retangulo_sele_color = 255,239,213 
+retangulo_sele_vitoria = 255,182,193 
+x_color= 100,149,237    
+circle_color = 255,105,180 
+score_value_color = 139,69,19 
+score_title_color = 119,136,153 
+
+[vibrant1]
+bg_color = 255,228,225  
+line_color = 255,182,193 
+retangulo_sele_color = 255,240,245 
+retangulo_sele_vitoria = 255,105,180 
+x_color= 30,144,255    
+circle_color = 255,69,0 
+score_value_color = 255,215,0 
+score_title_color = 75,0,130 
+
+[rainbow1]
+bg_color = 240,255,240  
+line_color = 123,104,238 
+retangulo_sele_color = 255,228,196
+retangulo_sele_vitoria = 173,216,230 
+x_color= 255,20,147    
+circle_color = 32,178,170 
+score_value_color = 255,69,0 
+score_title_color = 138,43,226 
+
+[sunset1]
+bg_color = 255,204,153  
+line_color = 255,160,122 
+retangulo_sele_color = 255,218,185 
+retangulo_sele_vitoria = 255,127,80 
+x_color= 255,99,71     
+circle_color = 255,20,147 
+score_value_color = 255,69,0 
+score_title_color = 233,150,122 
+
+[reggae1]
+bg_color = 255,255,255
+line_color = 0,0,0
+retangulo_sele_color = 255,235,59
+retangulo_sele_vitoria = 76,175,80
+x_color= 244,67,54
+circle_color = 33,150,243
+score_value_color = 0,0,0
+score_title_color = 255,235,59
+
+[reggae2]
+bg_color = 0,77,64
+line_color = 255,235,59
+retangulo_sele_color = 139,195,74
+retangulo_sele_vitoria = 255,193,7
+x_color= 244,67,54
+circle_color = 33,150,243
+score_value_color = 255,235,59
+score_title_color = 255,235,59
+
+[reggae3]
+bg_color = 0,77,64
+line_color = 255,235,59
+retangulo_sele_color = 31, 32, 33
+retangulo_sele_vitoria = 255,193,7
+x_color= 244,67,54
+circle_color = 139,195,74
+score_value_color = 255,235,59
+score_title_color = 255,235,59
+
+[brazil]
+bg_color = 0,155,58
+line_color = 255,255,255
+retangulo_sele_color = 255,205,0
+retangulo_sele_vitoria = 0,39,76
+x_color= 0,39,76
+circle_color = 255,205,0
+score_value_color = 255,255,255
+score_title_color = 255,255,255
+
+[usa]
+bg_color = 0,40,104
+line_color = 255,255,255
+retangulo_sele_color = 191,10,48
+retangulo_sele_vitoria = 255,184,28
+x_color= 191,10,48
+circle_color = 255,184,28
+score_value_color = 255,255,255
+score_title_color = 255,255,255
+
+
+[communist]
+bg_color = 128,0,0
+line_color = 255,0,0
+retangulo_sele_color = 255,0,0
+retangulo_sele_vitoria = 55,0,0
+x_color= 255,215,0
+circle_color = 255,215,0
+score_value_color = 255,255,255
+score_title_color = 255,0,0
+
+[caneta_azul]
+bg_color = 0,102,204
+line_color = 255,255,255
+retangulo_sele_color = 255,255,255
+retangulo_sele_vitoria = 255,255,0
+x_color= 255,255,255
+circle_color = 255,0,0
+score_value_color = 255,255,255
+score_title_color = 255,255,255
+
+[azul_dark]
+bg_color = 0,0,51
+line_color = 255,255,255
+retangulo_sele_color = 255,255,255
+retangulo_sele_vitoria = 255,255,0
+x_color= 255,255,255
+circle_color = 255,0,0
+score_value_color = 255,255,255
+score_title_color = 255,255,255
+
+[rock_dark]
+bg_color = 33,33,33
+line_color = 255,255,255
+retangulo_sele_color = 255,0,0
+retangulo_sele_vitoria = 255,215,0
+x_color= 255,255,255
+circle_color = 255,255,255
+score_value_color = 255,255,255
+score_title_color = 255,255,255
+
+[666]
+bg_color = 0,0,0
+line_color = 255,0,0
+retangulo_sele_color = 55,0,0
+retangulo_sele_vitoria = 255,215,0
+x_color= 255,0,0
+circle_color = 255,0,0
+score_value_color = 255,255,255
+score_title_color = 255,0,0
+
+[dark_red]
+bg_color = 28,28,28
+line_color = 255,255,255
+retangulo_sele_color = 150,0,0
+retangulo_sele_vitoria = 255,0,0
+x_color= 255,255,255
+circle_color = 255,255,255
+score_value_color = 255,255,255
+score_title_color = 255,255,255
